<resources>
    <string name="app_name">iReport</string>
    <string name="slogan">be the city Hero !</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Register">Register</string>
    <string name="Signup">No account? Sign Up Here</string>
    <string name="Name">Name</string>
    <string name="Birthday">Birthday</string>
    <string name="IBAN">IBAN</string>
    <string name="Tel">Phone</string>
    <string name="Lastname">Last Name</string>
    <string name="Email">E-mail</string>
    <string name="Addresse">Addresse</string>
    <string name="Return">Return</string>
    <string name="Report">Report</string>
    <string name="search">Search</string>
    <string name="mydesk">My Desk</string>
    <string name="description_text">Welcome Image</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_content_description">Content Description...</string>
    <string name="text_picker_result">Picker Result</string>
    <string name="text_create_account">Create Account</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile">Mobile</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_report">Report</string>
    <string name="text_report_typ">Type:</string>
    <string name="text_take_picture">Pictures</string>
    <string name="text_location">Location:</string>
    <string name="text_get_location">Get Location</string>
    <string name="text_reference">Reference(vehicle Nr., comments...)</string>
    <string name="text_send">Send</string>
    <string name="image_content_description">Image</string>
    <string name="text_search">Search</string>
    <string name="text_return">Return</string>
    <string name="text_ok">OK</string>
    <string name="user_welcome_message">User welcome message</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">AIzaSyDAsUW2Oj88xQZaBJOFMo8YIjPku52fSh4</string>
    <string name="text_register_info">After clicking the Register Button. You will be redirected to Login Screen</string>
    <string name="Welcome"> Willkomen bei I Report All     Unsere App hilft euch den Ämter die Gesetzeverstöße zu berichten.</string>
    <string name="text_profile">Profile</string>
    <string name="text_about">About</string>
    <string name="text_log_out">Log out</string>
    <string name="text_user_welcome_message">User Welcome Message</string>
    <string-array name="arr_report_typ">
        <item>Accident</item>
        <item>Defect Glowlights</item>
        <item>Defect Trash</item>
        <item>Wrong parked</item>
    </string-array>
    <string-array name="userchoise_list">
        <item>Sign In</item>
        <item>Sign Up</item>
    </string-array>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Conntect the charge</string>
    <string name="desc_slide1">Conntect the charge</string>
    <string name="title_slide2">Conntect the charge</string>
    <string name="desc_slide2">Conntect the charge</string>
    <string name="title_slide3">Conntect the charge</string>
    <string name="desc_slide3">Conntect the charge</string>




        <string name="text_settings">Settings</string>
        <string name="text_about_us">About Us</string>
        <string name="text_user_info">User Info</string>
        <string name="menu_button">Menu button</string>
        <string name="text_adress">Adress</string>
        <string name="text_mobile">Mobile</string>
        <string name="text_more">More...</string>
        <string name="text_email">Email</string>
        <string name="text_iban">Iban</string>





</resources>
