<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLight"
    android:layout_height="match_parent"
    tools:context="com.example.hachemmasghouni.ireport1.Dashboard">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button4"
        android:text="@string/Report"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button5"
        android:textColor="@color/icons"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button5"
        android:text="@string/search"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="221dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button6"
        android:text="@string/mydesk"
        android:textAlignment="center"
        android:layout_marginEnd="23dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView10"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        android:layout_marginRight="23dp" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:onClick="button7"
        android:text="@string/Return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="137dp"
        android:layout_height="44dp"
        android:layout_marginLeft="122dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_dashboard"
        android:textAlignment="center"
        android:textColor="@color/icons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:mockup="@style/Animation.AppCompat.Dialog" />

    <TextView
        android:id="@+id/tv_test_welcome_messae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/user_welcome_message"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="118dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
